Fixed bug #40883 (mysql_query() is allocating memory incorrectly). (Tony)